Solve the celebrities cards size issue that appeared on safari broweser

--- a/celebrities.html
+++ b/celebrities.html
@@ -119,7 +119,7 @@
                     <a href="https://en.wikipedia.org/wiki/Novak_Djokovic" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/novak-djokovic.webp" class="celebrity-img"
+                                <img src="assets/images/celebrities/novak-djokovic.jpeg" class="celebrity-img"
                                     alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Novak Djokovic</h3>
@@ -204,7 +204,7 @@
                     <a href="https://en.wikipedia.org/wiki/Amal_Clooney" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/amal-clooney.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/amal-clooney.jpeg" class="celebrity-img" alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Amal Clooney</h3>
                                 </div>
@@ -232,7 +232,7 @@
                     <a href="https://en.wikipedia.org/wiki/Victoria_Beckham" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/victoria-beckham.webp" class="celebrity-img"
+                                <img src="assets/images/celebrities/victoria-beckham.jpeg" class="celebrity-img"
                                     alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Victoria Beckham</h3>
@@ -291,7 +291,7 @@
                         class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/nurgul-yesilcay.webp" class="celebrity-img"
+                                <img src="assets/images/celebrities/nurgul-yesilcay.jpeg" class="celebrity-img"
                                     alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Nurgul Yesilcay</h3>
@@ -320,7 +320,7 @@
                     <a href="https://en.wikipedia.org/wiki/Ece_Vahapo%C4%9Flu" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ece-vahapoglu.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/ece-vahapoglu.jpeg" class="celebrity-img" alt="...">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Ece Vahapoglu</h3>
                                 </div>
