Redirct to error page when click on celebrity Farah

--- a/celebrities.html
+++ b/celebrities.html
@@ -419,7 +419,7 @@
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="#" class="celebrity-link">
+                    <a href="404.html" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img" alt="...">
