Add countdown to subscription-confirmation page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- Main Section -->
   <main>
     <!-- Home page background image -->
-    <img src="assets/images/family-gathering-to-eat.jpg"  id="bg-img" alt="family eating together">
+    <img src="assets/images/family-gathering-to-eat.jpg"  id="home-page-bg-img" alt="family eating together">
 
     <!-- Use bootstrap grid -->
     <div class="container text-center">
