--- a/subscription-confirmation.html
+++ b/subscription-confirmation.html
@@ -87,6 +87,23 @@
         class="confirmation-image slide-in-up">
       <h2 class="confirmation-message slide-in-down">Congratulations! You successfully subscribed to our newletter!</h2>
       <p class="confirmation-description slide-in-up">We will redirect you to Home page within few seconds.</p>
+
+      <div id="countdown">
+        <div class="countdown-wrapper">
+          <div class="time"><p class="remaining-time">10</p></div>
+          <div class="time"><p class="remaining-time">9</p></div>
+          <div class="time"><p class="remaining-time">8</p></div>
+          <div class="time"><p class="remaining-time">7</p></div>
+          <div class="time"><p class="remaining-time">6</p></div>
+          <div class="time"><p class="remaining-time">5</p></div>
+          <div class="time"><p class="remaining-time">4</p></div>
+          <div class="time"><p class="remaining-time">3</p></div>
+          <div class="time"><p class="remaining-time">2</p></div>
+          <div class="time"><p class="remaining-time">1</p></div>
+        </div>
+      </div>
+      
+
     </div>
   </main>
 
