Update all alt fields with suitable content

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/gluten-samples.jpg" class="lp-div-img" alt="...">
+              <img src="assets/images/gluten-samples.jpg" class="lp-div-img" alt="some gluten samples including bread and toast">
             </div>
           </a>
         </div>
@@ -120,7 +120,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-vertical">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="...">
+              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
             </div>
           </a>
         </div>
@@ -147,7 +147,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-horizontal">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="...">
+              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
             </div>
           </a>
         </div>
@@ -157,7 +157,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
           <a href="recipes.html" target="_blank">
             <div>
-              <img src="assets/images/having-dinner-on-table.jpg" class="lp-div-img" alt="...">
+              <img src="assets/images/having-dinner-on-table.jpg" class="lp-div-img" alt="girl and boy having dinner together on the table">
             </div>
           </a>
         </div>
