--- a/recipes.html
+++ b/recipes.html
@@ -100,7 +100,7 @@
           <a href="recipe.html#one" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="recipe-img" alt="cold cucumber soup">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
                   <p> Side Dish</p>
@@ -115,7 +115,7 @@
           <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="recipe-img" alt="raspberry mousse">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Raspberry Mousse</h3>
                   <p>Dessert</p>
@@ -132,7 +132,7 @@
           <a href="recipe.html#three" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="recipe-img" alt="zucchini lasagna">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Zucchini Lasagna</h3>
                   <p>Main Dish</p>
@@ -147,7 +147,7 @@
           <a href="recipe.html#four" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="recipe-img" alt="sweet potato salad">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Sweet Potato Salad</h3>
                   <p>Side Dish</p>
@@ -162,7 +162,7 @@
           <a href="recipe.html#five" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/korean-chicken.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/korean-chicken.jpg" class="recipe-img" alt="korean chicken">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Korean Chicken</h3>
                   <p>Main Dish</p>
