--- a/celebrities.html
+++ b/celebrities.html
@@ -120,7 +120,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/novak-djokovic.jpeg" class="celebrity-img"
-                                    alt="...">
+                                    alt="novak djokovic, tennis player">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Novak Djokovic</h3>
                                 </div>
@@ -134,7 +134,7 @@
                     <a href="https://en.wikipedia.org/wiki/Beren_Saat" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/beren-saat.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/beren-saat.jpg" class="celebrity-img" alt="beren saat, turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Beren Saat</h3>
                                 </div>
@@ -148,7 +148,7 @@
                     <a href="https://en.wikipedia.org/wiki/Meryem_Uzerli" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/meryem-uzerli.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/meryem-uzerli.jpg" class="celebrity-img" alt="meryem uzerli, turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Meryem Uzerli</h3>
                                 </div>
@@ -162,7 +162,7 @@
                     <a href="https://en.wikipedia.org/wiki/Justin_Trudeau" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/justin-trudeau.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/justin-trudeau.jpg" class="celebrity-img" alt="justin trudeau - prime minister of canada">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Justin Trudeau</h3>
                                 </div>
@@ -176,7 +176,7 @@
                     <a href="https://en.wikipedia.org/wiki/Sonam_Kapoor" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img" alt="sonam kapoor - indian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Sonam Kapoor</h3>
                                 </div>
@@ -190,7 +190,7 @@
                     <a href="https://en.wikipedia.org/wiki/Hend_Sabry" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/hend-sabry.jpeg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/hend-sabry.jpeg" class="celebrity-img" alt="hend sabry - egyptian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Hend Sabry</h3>
                                 </div>
@@ -204,7 +204,7 @@
                     <a href="https://en.wikipedia.org/wiki/Amal_Clooney" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/amal-clooney.jpeg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/amal-clooney.jpeg" class="celebrity-img" alt="amal clooney - british lawyer and human rights activis">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Amal Clooney</h3>
                                 </div>
@@ -218,7 +218,7 @@
                     <a href="https://en.wikipedia.org/wiki/Jeb_Bush" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/jeb-bush.jpeg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/jeb-bush.jpeg" class="celebrity-img" alt="jeb bush - american bussiness man">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Jeb Bush</h3>
                                 </div>
@@ -233,7 +233,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/victoria-beckham.jpeg" class="celebrity-img"
-                                    alt="...">
+                                    alt="victoria beckham - english fashion designer and singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Victoria Beckham</h3>
                                 </div>
@@ -248,7 +248,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/chelsea-clinton.jpg" class="celebrity-img"
-                                    alt="...">
+                                    alt="chelsea clinton - only child of former u.s. president bill clinton">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Chelsea Clinton</h3>
                                 </div>
@@ -262,7 +262,7 @@
                     <a href="https://en.wikipedia.org/wiki/Laila_Elwi" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/laila-eloui.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/laila-eloui.jpg" class="celebrity-img" alt="laila eloui - egyptian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Laila Eloui</h3>
                                 </div>
@@ -276,7 +276,7 @@
                     <a href="https://en.wikipedia.org/wiki/Burcu_Esmersoy" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img" alt="burcu esmersoy - turkish actress and anchorwoman">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Burcu Esmersoy</h3>
                                 </div>
@@ -292,7 +292,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/nurgul-yesilcay.jpeg" class="celebrity-img"
-                                    alt="...">
+                                    alt="nurgul yesilcay - turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Nurgul Yesilcay</h3>
                                 </div>
@@ -306,7 +306,7 @@
                     <a href="https://en.wikipedia.org/wiki/Shruti_Haasan" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/shruti-haasan.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/shruti-haasan.jpg" class="celebrity-img" alt="shruti haasan - indian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Shruti Haasan</h3>
                                 </div>
@@ -320,7 +320,7 @@
                     <a href="https://en.wikipedia.org/wiki/Ece_Vahapo%C4%9Flu" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ece-vahapoglu.jpeg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/ece-vahapoglu.jpeg" class="celebrity-img" alt="ece vahapoglu - turkish author">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Ece Vahapoglu</h3>
                                 </div>
@@ -334,7 +334,7 @@
                     <a href="https://en.wikipedia.org/wiki/Demet_Akal%C4%B1n" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/demet-akalin.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/demet-akalin.jpg" class="celebrity-img" alt="demet akalin - turkish singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Demet Akalin</h3>
                                 </div>
@@ -350,7 +350,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/razan-moughrabi.jpeg" class="celebrity-img"
-                                    alt="...">
+                                    alt="razan moughrabi - lebanese presenter">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Razan Moughrabi</h3>
                                 </div>
@@ -366,7 +366,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/jennifer-esposito.jpg" class="celebrity-img"
-                                    alt="...">
+                                    alt="jennifer esposito - american actress and film writer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Jennifer Esposito</h3>
                                 </div>
@@ -381,7 +381,7 @@
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/gwyneth-paltrow.jpg" class="celebrity-img"
-                                    alt="...">
+                                    alt="gwyneth paltrow - american actress and businesswoman">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Gwyneth Paltrow</h3>
                                 </div>
@@ -395,7 +395,7 @@
                     <a href="https://en.wikipedia.org/wiki/Ryan_Phillippe" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ryan-phillippe.jpg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/ryan-phillippe.jpg" class="celebrity-img" alt="ryan phillippe - american actor">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Ryan Phillippe</h3>
                                 </div>
@@ -409,7 +409,7 @@
                     <a href="https://en.wikipedia.org/wiki/Shatha_Hassoun" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/shatha-hassoun.png" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/shatha-hassoun.png" class="celebrity-img" alt="shatha hassoun - iraqi singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Shatha Hassoun</h3>
                                 </div>
@@ -422,7 +422,7 @@
                     <a href="404.html" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img" alt="glutenipedia owner's daughter - the reason behind making this website">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Farah ElSharief</h3>
                                 </div>
