Fix iFrame warning and extra slash on confirmation page

--- a/diagnose.html
+++ b/diagnose.html
@@ -87,7 +87,7 @@
       <div class="row g-2">
         <div class="col-12">
           <div class="card card-light" id="diagnose-card">
-            <iframe src="https://www.youtube.com/embed/ViJhwkjkt3g?si=osFYLu9uOisUsTTi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video-player"></iframe>
+            <iframe src="https://www.youtube.com/embed/ViJhwkjkt3g?si=osFYLu9uOisUsTTi" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video-player"></iframe>
             <div class="card-body">
               <h3 class="card-title dark-text"><strong>Diagnosing Celiac Disease and Gluten Intolerance</strong></h3>
               <p class="card-text dark-text">Understanding whether you have celiac disease or gluten intolerance is
