--- a/subscription-confirmation.html
+++ b/subscription-confirmation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Redirect to home page after 10 seconds -->
-  <meta http-equiv="refresh" content="10; URL=index.html" />
+  <meta http-equiv="refresh" content="10; URL=index.html">
   <title>GluteniPedia - Congratulations!</title>
 
   <!-- Favicon -->
