Remove extra spaces and lines in code

--- a/about.html
+++ b/about.html
@@ -23,18 +23,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-      <!-- Linking CSS Styling -->
+  <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-      <!-- Linking FontAwosome -->
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+  <!-- Linking FontAwosome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+</head>
 
 <body>
-
-
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
@@ -42,7 +38,8 @@
       <div class="container-fluid">
         <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <p>GluteniPedia</p></a>
+          <p>GluteniPedia</p>
+        </a>
         <!-- Make the menu button clickable to open and hide the menu-->
         <input id="menu-button" type="checkbox">
         <label for="menu-button">
@@ -67,8 +64,8 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="celebrities.html">Celebrities</a>
-              </li>
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" href="subscribe.html">Subscribe</a>
@@ -82,84 +79,104 @@
   <!-- Main Section -->
   <main>
     <div id="about-div">
-        <h1>About Us</h1>
+      <h1>About Us</h1>
 
-        <h2>Welcome to GLUTENIPEDIA </h2>
-        <p>
-            At GLUTENIPEDIA, our goal is to be your trusted source of information and support when it comes to understanding gluten, gluten intolerance, celiac disease, and gluten allergies. Whether you're living with these conditions or supporting someone who is, our website serves as a comprehensive encyclopedia dedicated to providing accurate information, helpful resources, and a community where everyone can find understanding and assistance.
-        </p>
+      <h2>Welcome to GLUTENIPEDIA </h2>
+      <p>
+        At GLUTENIPEDIA, our goal is to be your trusted source of information and support when it comes to understanding
+        gluten, gluten intolerance, celiac disease, and gluten allergies. Whether you're living with these conditions or
+        supporting someone who is, our website serves as a comprehensive encyclopedia dedicated to providing accurate
+        information, helpful resources, and a community where everyone can find understanding and assistance.
+      </p>
 
-        <h2>Our Mission</h2>
-        <p>
-            Our mission is to educate and empower individuals affected by gluten-related conditions, as well as the people who support them. We believe that knowledge is the key to living a healthy, fulfilling life free from gluten-related complications. By providing detailed, reliable information and practical guidance, we strive to make navigating gluten-free living simpler and more accessible for everyone.
-        </p>
+      <h2>Our Mission</h2>
+      <p>
+        Our mission is to educate and empower individuals affected by gluten-related conditions, as well as the people
+        who support them. We believe that knowledge is the key to living a healthy, fulfilling life free from
+        gluten-related complications. By providing detailed, reliable information and practical guidance, we strive to
+        make navigating gluten-free living simpler and more accessible for everyone.
+      </p>
 
-        <h2>Our Story</h2>
-        <p>
-            GLUTENIPEDIA was founded out of a deep commitment to improving the lives of those affected by gluten intolerance, celiac disease, and gluten allergies. After seeing firsthand how challenging it can be to find clear, comprehensive information and the impact it can have on daily life, Nour Shbair decided to create a space where people could come for answers, support, and community. Our journey began with the realization that there was a need for a dedicated resource that not only explains what gluten is and its effects but also provides practical solutions for managing these conditions.
-        </p>
+      <h2>Our Story</h2>
+      <p>
+        GLUTENIPEDIA was founded out of a deep commitment to improving the lives of those affected by gluten
+        intolerance, celiac disease, and gluten allergies. After seeing firsthand how challenging it can be to find
+        clear, comprehensive information and the impact it can have on daily life, Nour Shbair decided to create a space
+        where people could come for answers, support, and community. Our journey began with the realization that there
+        was a need for a dedicated resource that not only explains what gluten is and its effects but also provides
+        practical solutions for managing these conditions.
+      </p>
 
-        <h2>What We Offer</h2>
-        <p>
-            <strong>In-Depth Information:</strong> Our website is designed as a small encyclopedia, offering detailed explanations about gluten, how it affects the body, and the various conditions related to gluten intolerance and celiac disease. We cover everything from the science behind these conditions to the everyday realities of living with them.
-        </p>
-        <p>
-            <strong>Support for You and Your Loved Ones:</strong> Understanding and managing gluten-related conditions can be overwhelming, not just for those diagnosed but also for their families and friends. We offer guidance on how to support someone with gluten intolerance or celiac disease, from meal planning to navigating social situations.
-        </p>
-        <p>
-            <strong>Resources and Tools:</strong> We provide practical resources like gluten-free food guides, tips for dining out safely, and advice on how to maintain a gluten-free kitchen. Our goal is to make living gluten-free as easy and stress-free as possible.
-        </p>
+      <h2>What We Offer</h2>
+      <p>
+        <strong>In-Depth Information:</strong> Our website is designed as a small encyclopedia, offering detailed
+        explanations about gluten, how it affects the body, and the various conditions related to gluten intolerance and
+        celiac disease. We cover everything from the science behind these conditions to the everyday realities of living
+        with them.
+      </p>
+      <p>
+        <strong>Support for You and Your Loved Ones:</strong> Understanding and managing gluten-related conditions can
+        be overwhelming, not just for those diagnosed but also for their families and friends. We offer guidance on how
+        to support someone with gluten intolerance or celiac disease, from meal planning to navigating social
+        situations.
+      </p>
+      <p>
+        <strong>Resources and Tools:</strong> We provide practical resources like gluten-free food guides, tips for
+        dining out safely, and advice on how to maintain a gluten-free kitchen. Our goal is to make living gluten-free
+        as easy and stress-free as possible.
+      </p>
 
-        <h2>Our Vision</h2>
-        <p>
-            We envision a world where everyone, regardless of dietary restrictions, can enjoy a healthy and fulfilling life. Our aim is to break down the barriers of misinformation and misunderstanding surrounding gluten-related conditions. By offering a reliable and user-friendly resource, we hope to foster a better understanding and greater support for those living with these conditions.
-        </p>
+      <h2>Our Vision</h2>
+      <p>
+        We envision a world where everyone, regardless of dietary restrictions, can enjoy a healthy and fulfilling life.
+        Our aim is to break down the barriers of misinformation and misunderstanding surrounding gluten-related
+        conditions. By offering a reliable and user-friendly resource, we hope to foster a better understanding and
+        greater support for those living with these conditions.
+      </p>
 
-        <h2>Join Us</h2>
-        <p>
-            We invite you to explore our site, engage with our content. Whether you’re seeking information or looking for advice, GLUTENIPEDIA is here for you. Don’t forget to sign up for our newsletter to stay updated with the latest information, tips, and community events.
-        </p>
+      <h2>Join Us</h2>
+      <p>
+        We invite you to explore our site, engage with our content. Whether you’re seeking information or looking for
+        advice, GLUTENIPEDIA is here for you. Don’t forget to sign up for our newsletter to stay updated with the latest
+        information, tips, and community events.
+      </p>
 
-        <p>Thank you for visiting GLUTENIPEDIA. Together, we can make living gluten-free a better experience for everyone.</p>
+      <p>Thank you for visiting GLUTENIPEDIA. Together, we can make living gluten-free a better experience for everyone.
+      </p>
     </div>
-    </main>
+  </main>
 
   <!-- Footer -->
-    <!-- Footer -->
-    <footer>
-      <ul id="footer-bar">
-  
-        <li>
-          <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-  
-        <li>
-          <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
-            <i class="fa-brands fa-linkedin-in"></i>
-          </a>
-        </li>
-  
-        <li>
-          <a href="about.html" rel="noopener" aria-label="about us">
-            <i class="fa-solid fa-circle-info"></i>
-          </a>
-        </li>
-  
-        <li>
-          <a href="privacy-policy.html" rel="noopener" aria-label="our privacy policy">
-            <i class="fas fa-file-signature"></i>
-          </a>
-        </li>
-  
-      </ul>
-    </footer>
-    
+  <footer>
+    <ul id="footer-bar">
+
+      <li>
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
+          aria-label="github account for the site developer">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </li>
+
+      <li>
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener"
+          aria-label="linkedin account for the site developer">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+      </li>
+
+      <li>
+        <a href="about.html" rel="noopener" aria-label="about us">
+          <i class="fa-solid fa-circle-info"></i>
+        </a>
+      </li>
+
+      <li>
+        <a href="privacy-policy.html" rel="noopener" aria-label="our privacy policy">
+          <i class="fas fa-file-signature"></i>
+        </a>
+      </li>
+
+    </ul>
+  </footer>
 </body>
-
 </html>
-
-
-
-
