--- a/404.html
+++ b/404.html
@@ -28,11 +28,9 @@
 
     <!-- Linking FontAwosome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+</head>
 
 <body>
-
     <!-- Header Section -->
     <header>
         <!-- Nav Bar inspired by BootStrap -->
@@ -95,7 +93,6 @@
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
-
       <li>
         <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
           <i class="fa-brands fa-github"></i>
@@ -119,10 +116,7 @@
           <i class="fas fa-file-signature"></i>
         </a>
       </li>
-
     </ul>
   </footer>
-  
 </body>
-
 </html>
