--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -18,23 +18,18 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-      <!-- Linking CSS Styling -->
+  <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-      <!-- Linking FontAwosome -->
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+  <!-- Linking FontAwosome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+</head>
 
 <body>
-
-
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
@@ -42,7 +37,8 @@
       <div class="container-fluid">
         <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <p>GluteniPedia</p></a>
+          <p>GluteniPedia</p>
+        </a>
         <!-- Make the menu button clickable to open and hide the menu-->
         <input id="menu-button" type="checkbox">
         <label for="menu-button">
@@ -67,8 +63,8 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="celebrities.html">Celebrities</a>
-              </li>
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" href="subscribe.html">Subscribe</a>
@@ -81,66 +77,82 @@
 
   <!-- Main Section -->
   <main>
-        <div id="privacy-policy-div">
-        <h1>Privacy Policy</h1>
+    <div id="privacy-policy-div">
+      <h1>Privacy Policy</h1>
 
-        <p><strong>Effective Date:</strong> Sep,15 2024</p>
+      <p><strong>Effective Date:</strong> Sep,15 2024</p>
 
-        <p>At GLUTENIPEDIA, we are committed to protecting your privacy and ensuring that your personal information is handled safely and responsibly. This Privacy Policy outlines how we collect, use, and protect your information when you visit our website.</p>
+      <p>At GLUTENIPEDIA, we are committed to protecting your privacy and ensuring that your personal information is
+        handled safely and responsibly. This Privacy Policy outlines how we collect, use, and protect your information
+        when you visit our website.</p>
 
-        <h2>1. Information We Collect</h2>
-        <h3>a. Personal Information:</h3>
-        <p>When you visit our website, we may collect personal information that you voluntarily provide to us, such as your name, email address, phone number, and any other information you choose to provide when filling out forms, subscribing to newsletters, or contacting us.</p>
-        <h3>b. Non-Personal Information:</h3>
-        <p>We may also collect non-personal information automatically through your interaction with our site. This includes your IP address, browser type, operating system, referring URLs, and information about your use of our website, such as pages visited and time spent on the site.</p>
-        <h3>c. Cookies and Tracking Technologies:</h3>
-        <p>We use cookies and similar tracking technologies to enhance your browsing experience, analyze site traffic, and understand how you use our website. Cookies are small files stored on your device that help us remember your preferences and improve your user experience.</p>
+      <h2>1. Information We Collect</h2>
+      <h3>a. Personal Information:</h3>
+      <p>When you visit our website, we may collect personal information that you voluntarily provide to us, such as
+        your name, email address, phone number, and any other information you choose to provide when filling out forms,
+        subscribing to newsletters, or contacting us.</p>
+      <h3>b. Non-Personal Information:</h3>
+      <p>We may also collect non-personal information automatically through your interaction with our site. This
+        includes your IP address, browser type, operating system, referring URLs, and information about your use of our
+        website, such as pages visited and time spent on the site.</p>
+      <h3>c. Cookies and Tracking Technologies:</h3>
+      <p>We use cookies and similar tracking technologies to enhance your browsing experience, analyze site traffic, and
+        understand how you use our website. Cookies are small files stored on your device that help us remember your
+        preferences and improve your user experience.</p>
 
-        <h2>2. How We Use Your Information</h2>
-        <p>We use the information we collect to:</p>
-        <ul>
-            <li>Provide, operate, and maintain our website</li>
-            <li>Improve, personalize, and expand our website's functionality</li>
-            <li>Communicate with you, respond to your inquiries, and send you updates</li>
-            <li>Analyze and monitor usage trends and preferences</li>
-            <li>Send you promotional materials, newsletters, and other information (with your consent)</li>
-            <li>Protect against fraudulent or unauthorized activities</li>
-        </ul>
+      <h2>2. How We Use Your Information</h2>
+      <p>We use the information we collect to:</p>
+      <ul>
+        <li>Provide, operate, and maintain our website</li>
+        <li>Improve, personalize, and expand our website's functionality</li>
+        <li>Communicate with you, respond to your inquiries, and send you updates</li>
+        <li>Analyze and monitor usage trends and preferences</li>
+        <li>Send you promotional materials, newsletters, and other information (with your consent)</li>
+        <li>Protect against fraudulent or unauthorized activities</li>
+      </ul>
 
-        <h2>3. Sharing Your Information</h2>
-        <p>We do not sell, trade, or rent your personal information to third parties. However, we may share your information in the following circumstances:</p>
-        <h3>a. Service Providers:</h3>
-        <p>We may share your information with trusted third-party service providers who assist us in operating our website, conducting our business, or servicing you. These service providers are required to keep your information confidential and use it only for the purposes for which it was shared.</p>
-        <h3>b. Legal Requirements:</h3>
-        <p>We may disclose your information if required by law, or in response to legal requests such as subpoenas, court orders, or government demands.</p>
-        <h3>c. Business Transfers:</h3>
-        <p>In the event of a merger, acquisition, or sale of all or part of our assets, your information may be transferred as part of that transaction.</p>
+      <h2>3. Sharing Your Information</h2>
+      <p>We do not sell, trade, or rent your personal information to third parties. However, we may share your
+        information in the following circumstances:</p>
+      <h3>a. Service Providers:</h3>
+      <p>We may share your information with trusted third-party service providers who assist us in operating our
+        website, conducting our business, or servicing you. These service providers are required to keep your
+        information confidential and use it only for the purposes for which it was shared.</p>
+      <h3>b. Legal Requirements:</h3>
+      <p>We may disclose your information if required by law, or in response to legal requests such as subpoenas, court
+        orders, or government demands.</p>
+      <h3>c. Business Transfers:</h3>
+      <p>In the event of a merger, acquisition, or sale of all or part of our assets, your information may be
+        transferred as part of that transaction.</p>
 
-        <h2>4. Your Choices and Rights</h2>
-        <p>You have the right to:</p>
-        <ul>
-            <li>Request access to the personal information we hold about you and update or correct it if necessary.</li>
-            <li>Opt-out of receiving marketing communications from us by following the unsubscribe instructions provided in our emails or by contacting us directly.</li>
-            <li>Request the deletion of your personal information, subject to certain exceptions provided by law.</li>
-            <li>Restrict or object to the processing of your personal information in certain circumstances.</li>
-        </ul>
-        <p>To exercise any of these rights, please contact us at <a href="mailto:nshbair@gmail.com">GLUTENIPEDIA E-mail</a>.</p>
+      <h2>4. Your Choices and Rights</h2>
+      <p>You have the right to:</p>
+      <ul>
+        <li>Request access to the personal information we hold about you and update or correct it if necessary.</li>
+        <li>Opt-out of receiving marketing communications from us by following the unsubscribe instructions provided in
+          our emails or by contacting us directly.</li>
+        <li>Request the deletion of your personal information, subject to certain exceptions provided by law.</li>
+        <li>Restrict or object to the processing of your personal information in certain circumstances.</li>
+      </ul>
+      <p>To exercise any of these rights, please contact us at <a href="mailto:nshbair@gmail.com">GLUTENIPEDIA
+          E-mail</a>.</p>
     </div>
-    
-    </main>
+  </main>
 
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
 
       <li>
-        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
+          aria-label="github account for the site developer">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener"
+          aria-label="linkedin account for the site developer">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
@@ -159,11 +171,5 @@
 
     </ul>
   </footer>
-  
 </body>
-
 </html>
-
-
-
-
