--- a/recipe.html
+++ b/recipe.html
@@ -18,7 +18,6 @@
         href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-
     <!-- Linking Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -28,12 +27,9 @@
 
     <!-- Linking FontAwosome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
+</head>
 
 <body>
-
-
-
     <!-- Header Section -->
     <header>
         <!-- Nav Bar inspired by BootStrap -->
@@ -81,7 +77,6 @@
 
     <!-- Main Section -->
     <main id="recipe-main-section" class="container">
-
         <!-- Section for (Cold Cucumber Soup) Recipe -->
         <div class="recipe-content" id="one">
             <div class="card card-light recipes-header-card">
@@ -151,7 +146,6 @@
             </div>
         </div>
 
-
         <!-- Section for (Raspberry Mousse) Recipe -->
         <div class="recipe-content" id="two">
             <div class="card card-light recipes-header-card">
@@ -160,7 +154,6 @@
                     alt="Raspberry mousse">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
-
                     <h4 class="card-body">Ingredients:</h4>
                     <ul>
                         <li>2 gelatine leaves</li>
@@ -194,7 +187,6 @@
                                 gently until dissolved). Set aside to cool for 15 mins.</p>
                         </li>
 
-
                         <li>
                             <p>Whip the cream to soft peaks using an electric whisk, then gently fold this into the
                                 raspberry mixture. Spoon into the ramekins or moulds and chill overnight, or for at
@@ -211,16 +203,14 @@
             </div>
         </div>
 
-
         <!-- Section for (Zucchini Lasagna) Recipe -->
         <div class="recipe-content" id="three">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Zucchini Lasagna</h3>
-
-                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img" alt="Zucchini lasagna">
+                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img"
+                    alt="Zucchini lasagna">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
-
                     <h4 class="card-body">Ingredients:</h4>
                     <ul>
                         <li>Zucchini</li>
@@ -260,22 +250,18 @@
                             <p>Bake according to the recipe. </p>
                         </li>
                     </ol>
-
                 </div>
             </div>
         </div>
-
 
         <!-- Section for (Sweet Potato Salad) Recipe -->
         <div class="recipe-content" id="four">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Sweet Potato Salad</h3>
-
                 <img src="assets/images/recipes/sweet-potato-salad.jpg" class="card-img-top recipe-details-img"
                     alt="Sweet potato salad">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
-
                     <h4 class="card-body">Ingredients:</h4>
                     <ul>
                         <li>Sweet Potatoes</li>
@@ -321,16 +307,14 @@
             </div>
         </div>
 
-
         <!-- Section for (Korean Chicken) Recipe -->
         <div class="recipe-content" id="five">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Korean Chicken</h3>
-
-                <img src="assets/images/recipes/korean-chicken.jpg" class="card-img-top recipe-details-img" alt="Korean chicken">
+                <img src="assets/images/recipes/korean-chicken.jpg" class="card-img-top recipe-details-img"
+                    alt="Korean chicken">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
-
                     <h4 class="card-body">Ingredients:</h4>
                     <ul>
                         <li>Chicken</li>
@@ -375,7 +359,6 @@
     <!-- Footer -->
     <footer>
         <ul id="footer-bar">
-
             <li>
                 <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
                     aria-label="github account for the site developer">
@@ -401,10 +384,8 @@
                     <i class="fas fa-file-signature"></i>
                 </a>
             </li>
-
         </ul>
     </footer>
-
 </body>
 
 </html>
