--- a/recipes.html
+++ b/recipes.html
@@ -18,7 +18,6 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,14 +25,11 @@
   <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-      <!-- Linking FontAwosome -->
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
+  <!-- Linking FontAwosome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+</head>
 
 <body>
-
-
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
@@ -85,7 +81,8 @@
     <div class="card card-light recipes-header-card slide-in-up">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
-        <img src="assets/images/recipes-book.jpg" class="card-img-top" alt="Tiny female chef cooking meal using recipe in kitchen">
+        <img src="assets/images/recipes-book.jpg" class="card-img-top"
+          alt="Tiny female chef cooking meal using recipe in kitchen">
 
         <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can try,
           whether you are looking for breakfast, lunch, dinner, or even snacks.</p>
@@ -109,7 +106,6 @@
           </a>
         </div>
 
-
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
@@ -123,9 +119,6 @@
             </div>
           </a>
         </div>
-  
-
-
 
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#three" class="recipe-link">
@@ -141,7 +134,6 @@
           </a>
         </div>
 
-
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#four" class="recipe-link">
             <div class="p-3 recipe-card-container">
@@ -156,7 +148,6 @@
           </a>
         </div>
 
-
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#five" class="recipe-link">
             <div class="p-3 recipe-card-container">
@@ -170,9 +161,6 @@
             </div>
           </a>
         </div>
-
-
-
       </div>
     </div>
   </main>
@@ -182,13 +170,15 @@
     <ul id="footer-bar">
 
       <li>
-        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
+          aria-label="github account for the site developer">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener"
+          aria-label="linkedin account for the site developer">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
@@ -207,7 +197,5 @@
 
     </ul>
   </footer>
-
 </body>
-
 </html>
