--- a/subscribe.html
+++ b/subscribe.html
@@ -18,23 +18,18 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-      <!-- Linking CSS Styling -->
+  <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-      <!-- Linking FontAwosome -->
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+  <!-- Linking FontAwosome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+</head>
 
 <body>
-
-
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
@@ -42,7 +37,8 @@
       <div class="container-fluid">
         <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <p>GluteniPedia</p></a>
+          <p>GluteniPedia</p>
+        </a>
 
         <!-- Make the menu button clickable to open and hide the menu-->
         <input id="menu-button" type="checkbox">
@@ -68,8 +64,8 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="celebrities.html">Celebrities</a>
-              </li>
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link active" href="subscribe.html"><strong><u>Subscribe</u></strong></a>
@@ -83,49 +79,51 @@
   <!-- Main Section -->
   <main id="subscribe-main">
     <section id="subscribe" class="slide-in-up">
-        <form id="subscribe-form" action="subscription-confirmation.html">
-            <h2><i class="fa-solid fa-wheat-awn-circle-exclamation"></i> Let's subscribe to our monthly newsletter!</h2>
-            <label for="first-name">First Name</label>
-            <input type="text" name="first_name" id="first-name" class="text-input" required>
-            <br>
-            <label for="last-name">Last Name</label>
-            <input type="text" name="last_name" id="last-name" class="text-input" required>
-            <br>
-            <label for="email-address">Email Address</label>
-            <input type="email" name="email_address" id="email-address" class="text-input" required>
-            <br>
-            <p>Please select your category:</p>
-            <div class="radio-buttons">
-                <div>
-                    <label for="allergic">Allergic</label>
-                    <input type="radio" name="subscription_preference" id="allergic" value="allergic" required checked>
-                </div>
-                <div>
-                    <label for="relative">Relative</label>
-                    <input type="radio" name="subscription_preference" id="relative" value="relative" required>
-                </div>
-                <div>
-                    <label for="friend">Friend</label>
-                    <input type="radio" name="subscription_preference" id="friend" value="friend" required>
-                </div>
-            </div>
-            <button type="submit" class="join-button">Subscribe!</button>
-        </form>
+      <form id="subscribe-form" action="subscription-confirmation.html">
+        <h2><i class="fa-solid fa-wheat-awn-circle-exclamation"></i> Let's subscribe to our monthly newsletter!</h2>
+        <label for="first-name">First Name</label>
+        <input type="text" name="first_name" id="first-name" class="text-input" required>
+        <br>
+        <label for="last-name">Last Name</label>
+        <input type="text" name="last_name" id="last-name" class="text-input" required>
+        <br>
+        <label for="email-address">Email Address</label>
+        <input type="email" name="email_address" id="email-address" class="text-input" required>
+        <br>
+        <p>Please select your category:</p>
+        <div class="radio-buttons">
+          <div>
+            <label for="allergic">Allergic</label>
+            <input type="radio" name="subscription_preference" id="allergic" value="allergic" required checked>
+          </div>
+          <div>
+            <label for="relative">Relative</label>
+            <input type="radio" name="subscription_preference" id="relative" value="relative" required>
+          </div>
+          <div>
+            <label for="friend">Friend</label>
+            <input type="radio" name="subscription_preference" id="friend" value="friend" required>
+          </div>
+        </div>
+        <button type="submit" class="join-button">Subscribe!</button>
+      </form>
     </section>
-    </main>
+  </main>
 
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
 
       <li>
-        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
+          aria-label="github account for the site developer">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener"
+          aria-label="linkedin account for the site developer">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
@@ -144,11 +142,5 @@
 
     </ul>
   </footer>
-  
 </body>
-
 </html>
-
-
-
-
