--- a/subscription-confirmation.html
+++ b/subscription-confirmation.html
@@ -20,7 +20,6 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -30,11 +29,9 @@
 
   <!-- Linking FontAwosome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+</head>
 
 <body>
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
@@ -102,8 +99,6 @@
           <div class="time"><p class="remaining-time">1</p></div>
         </div>
       </div>
-      
-
     </div>
   </main>
 
@@ -139,7 +134,5 @@
 
     </ul>
   </footer>
-
 </body>
-
 </html>
